# gdk

./: .dir-locals.el  .gitignore  Makefile  meson.build
src/: ga_rpc.cpp  ga_rpc.hpp  ga_session.cpp  ga_session.hpp  meson.build  network_parameters.cpp  network_parameters.hpp
subprojects/gdk_rpc/: apple-exported-symbols  gdk_rpc.h  meson.build
subprojects/gdk_rpc/src/: lib.rs  network.rs  session.rs  util.rs  wallet.rs
tests/: test_rpc.cpp
tools/: buildgdk_rpc.sh
